# m3d

./: .gitignore  LICENSE  README.md  meson.build
m3d/: NVec.cpp  NVec.hpp  Vector.cpp  Vector.hpp  meson.build  vector_functions.cpp  vector_functions.hpp
pym3d/: .pyvec.cpp.swp  meson.build  py_nvec.cpp  py_vector.cpp  py_vector_functions.cpp  pyvec.cpp  pyvec.hpp
subprojects/: doctest.wrap
test/: .nvec.test.cpp.swp  NVecTest.cpp  VectorTest.cpp  meson.build  nvec.test.cpp  vector.test.cpp  vector_operations_test.cpp
